made background global and fixed header spacing problem

--- a/page/plans/plans.css
+++ b/page/plans/plans.css
@@ -2,16 +2,7 @@ main {
     padding-top: 32px;
 }
 
-.background {
-    background: url("../../image/Wallet.png");
-    width: 100%;
-    height: 1080px;
-    background-repeat: no-repeat;
-    position: fixed;
-    background-position-x: center;
-    background-size: cover;
-    z-index: -1;
-}
+
 
 .plan {
      width: 60%;
@@ -40,7 +31,9 @@ main {
 
 #premium {
     background: #1565c0;
+    border: 2px solid #bbdefb;
 }
+
 .plan a {
     text-decoration: none;
     color: #0d47a1;
