--- a/style/mian.css
+++ b/style/mian.css
@@ -1,10 +1,4 @@
-#overview {
-    width: 100%;
-    height: 600px;
-    background-image: url(../image/Wallet.png);
-    background-position-x: center;
-    background-size: cover;
-}
+
 
 
 
@@ -62,7 +56,7 @@
 }
 
 #features {
-    background: #f5f5f5;
+    background-: #f5f5f5;
     margin-top: 80px;
     padding: 16px;
 }
