--- a/style/shared.css
+++ b/style/shared.css
@@ -8,6 +8,25 @@
     src: url('../font/Vazirmatn-FD-Regular.woff2');
 }
 
+
+
+.background {
+    background: url("../../image/Wallet.png");        
+    width: 100%;
+    height: 1080px;
+    background-repeat: no-repeat;
+    position: fixed;
+    background-position-x: center;
+    background-size: cover;
+    z-index: -1;
+
+}
+
+.main-header__push-down {
+    
+    padding: 30px;
+}
+
 body {
     font-family: Vazir-FD;
     margin: 0;
